fixed phone displays on mobile

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,31 +15,34 @@
     background-image: url(../images/icons/icon-phone.svg);
     position: relative;
     user-select: text;
-    &::before {
-      content: "+1 234 5555-55-55";
-      font-family: 'Inter';
-      position: absolute;
-      right: 40px;
-      width: max-content;
 
-      user-select:contain;
-
-      color: $mainTextColor;
-      text-align: right;
-      font-size: 12px;
-      font-weight: 700;
-      letter-spacing: 2px;
-      line-height: 32px;
-
-      visibility: hidden;
-      opacity: 0;
-
-      transition: $transition-duration linear;
-    }
-    &:hover {
+    @include onTablet {
       &::before {
-        visibility: visible;
-        opacity: 1;
+        content: "+1 234 5555-55-55";
+        font-family: 'Inter';
+        position: absolute;
+        right: 40px;
+        width: max-content;
+
+        user-select:contain;
+
+        color: $mainTextColor;
+        text-align: right;
+        font-size: 12px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        line-height: 32px;
+
+        visibility: hidden;
+        opacity: 0;
+
+        transition: $transition-duration linear;
+      }
+      &:hover {
+        &::before {
+          visibility: visible;
+          opacity: 1;
+        }
       }
     }
   }
